--- a/package.json
+++ b/package.json
@@ -3,20 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon dist/index.js",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "bcrypt": "^5.1.1",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
-    "express-session": "^1.18.1",
-    "mongoose": "^8.7.2",
-    "nocache": "^4.0.0",
-    "uuid": "^10.0.0"
+    "mongoose": "^8.7.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
